# goit-pythonweb-hw-06

./: connect.py  docker-compose.yml  models.py  models_example.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: aa89c034eee2_init.py
