[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = ""
authors = ["Volodymyr Vovnenko <vovnenko.volodymyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
faker = "^33.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
